@@ -8,11 +8,11 @@ use File::Spec;
 use lib File::Spec->catdir(File::Spec->curdir,"t");
 use tools;
 use Config;
-
+my $devnull = File::Spec->devnull;
 my $DEBUG=0;
 
 # be cautious: run this only on systems I have tested it on
-my %os_ok=( linux => 1, solaris => 1, darwin => 1);
+my %os_ok=( linux => 1, solaris => 1, darwin => 1, MSWin32 => 1);
 if( !$os_ok{$^O}) { print "1..1\nok 1\n"; warn "skipping, test runs only on some OSs\n"; exit; }
 
 if( $] < 5.006) { print "1..1\nok 1\n"; warn "skipping, xml_merge runs only on perl 5.6 and later\n"; exit; }
@@ -21,7 +21,7 @@ print "1..18\n";
 
 my $perl= $Config{perlpath};
 if ($^O ne 'VMS') { $perl .= $Config{_exe} unless $perl =~ m/$Config{_exe}$/i; }
-
+$perl = "$^X -Mblib ";
 my $xml_split = File::Spec->catfile( "tools", "xml_split", "xml_split");
 my $xml_merge = File::Spec->catfile( "tools", "xml_merge", "xml_merge");
 
@@ -49,13 +49,14 @@ sub test_split_merge
     $split_opts ||= '';
     $merge_opts ||= '';
     $base_nb++;
+    my $verbifdebug = $DEBUG ? '-v' : '';
     my $expected_base= File::Spec->catfile( "$test_dir", "test_xml_split_expected-$base_nb"); 
     my $base= File::Spec->catfile( "$test_dir", "test_xml_split-$base_nb"); 
 
-    systemq( "$perl $xml_split -b $base $split_opts $file");
+    systemq( "$perl $xml_split $verbifdebug -b $base $split_opts $file");
     ok( same_files( $expected_base, $base), "xml_split $split_opts $test_file");
 
-    system "$perl $xml_merge -o $base.xml $merge_opts $base-00.xml";
+    system "$perl $xml_merge $verbifdebug -o $base.xml $merge_opts $base-00.xml";
     ok( same_file( "$base.xml", $file), "xml_merge $merge_opts $test_file");
     
     unlink( glob( "$base*")) unless( $DEBUG);
@@ -92,7 +93,7 @@ sub slurp_mod
 
 sub systemq 
   { if( !$DEBUG)
-      { system "$_[0] 1>/dev/null 2>/dev/null"; }
+      { system "$_[0] 1>$devnull 2>$devnull"; }
     else
       { warn "$_[0]\n";
         system $_[0];
